--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,5 +1,21 @@
 @import "../vars";
 
 .app__footer {
-  padding: $app-gap
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: $app-gap;
+  background: $footer-background;
+}
+
+.app__footer-item {
+  line-height: normal;
+  font-size: 12px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+  &--info {
+    text-align: right;
+  }
 }
